[gd_scene load_steps=2 format=3 uid="uid://bcq470jj8xney"]

[ext_resource type="Script" path="res://UI/keywords.gd" id="1_cksic"]

[node name="Keywords" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cksic")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WarriorContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WarriorLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/WarriorContainer"]
layout_mode = 2

[node name="WarriorKeyword" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/WarriorContainer"]
layout_mode = 2

[node name="ArcherContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ArcherLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ArcherContainer"]
layout_mode = 2

[node name="ArcherKeyword" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ArcherContainer"]
layout_mode = 2

[node name="HealerContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealerLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HealerContainer"]
layout_mode = 2

[node name="HealerKeyword" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HealerContainer"]
layout_mode = 2
